--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "application-name",
+  "name": "poll-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -7,6 +7,9 @@
   },
   "dependencies": {
     "express": "3.0.2",
-    "jade": "*"
+    "jade": "*",
+    "mongoose": "~3.3.1",
+    "string": "~1.1.0",
+    "session-mongoose": "0.0.7"
   }
 }
