--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jade": "*",
     "mongoose": "~3.3.1",
     "string": "~1.1.0",
-    "session-mongoose": "0.0.7"
+    "session-mongoose": "0.0.7",
+    "nib": "~0.8.2"
   }
 }
