--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "mongoose": "~3.3.1",
     "string": "~1.1.0",
     "session-mongoose": "0.0.7",
-    "nib": "~0.8.2"
+    "nib": "~0.8.2",
+    "stylus": "~0.30.1"
   }
 }
