--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "express": "3.0.2",
-    "jade": "*"
+    "jade": "*",
+    "bootstrap-stylus": "~0.2.1",
+    "stylus": "~0.30.1"
   }
 }
