--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "session-mongoose": "0.0.7",
     "nib": "~0.8.2",
     "stylus": "~0.30.1"
-  }
+  },
+  "author": "#secrethackathon team (http://www.softwareniagara.com)",
+  "contributors": [
+    "Nickolas Kenyeres (http://knicklabs.github.com) <nkenyeres@gmail.com>"  
+  ]
 }
