Added myself as contributor

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "author": "#secrethackathon team (http://www.softwareniagara.com)",
   "contributors": [
-    "Nickolas Kenyeres (http://knicklabs.github.com) <nkenyeres@gmail.com>"  
+    "Nickolas Kenyeres (http://knicklabs.github.com) <nkenyeres@gmail.com>",
+    "Michael Mottola (http://michaelencode.com/) <mikemottola@gmail.com>"
   ]
 }
