Added Thomas Made to contributors

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "#secrethackathon team (http://www.softwareniagara.com)",
   "contributors": [
     "Nickolas Kenyeres (http://knicklabs.github.com) <nkenyeres@gmail.com>",
-    "Michael Mottola (http://michaelencode.com/) <mikemottola@gmail.com>"
+    "Michael Mottola (http://michaelencode.com/) <mikemottola@gmail.com>",
+    "Thomas Madej (http://madej.ca/) <tom@madej.ca>"
   ]
 }
