--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "nib": "~0.8.2",
     "stylus": "~0.30.1"
   },
+  "devDependencies": {
+    "node-dev": "~0.2.3"
+  },
   "author": "#secrethackathon team (http://www.softwareniagara.com)",
   "contributors": [
     "Nickolas Kenyeres (http://knicklabs.github.com) <nkenyeres@gmail.com>",
