Add myself as a contributor

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "contributors": [
     "Nickolas Kenyeres (http://knicklabs.github.com) <nkenyeres@gmail.com>",
     "Michael Mottola (http://michaelencode.com/) <mikemottola@gmail.com>",
-    "Thomas Madej (http://madej.ca/) <tom@madej.ca>"
+    "Thomas Madej (http://madej.ca/) <tom@madej.ca>",
+    "Dennis Ideler (http://dennisideler.com) <ideler.dennis@gmail.com>"
   ]
 }
