--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "string": "~1.1.0",
     "session-mongoose": "0.0.7",
     "nib": "~0.8.2",
-    "stylus": "~0.30.1"
+    "stylus": "~0.30.1",
+    "fdf": "0.0.0"
   },
   "devDependencies": {
     "node-dev": "~0.2.3"
