--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "qrcode": "~0.2.4",
     "canvas": "~0.13.1",
     "pdfkit": "~0.1.9"
+    "cookies": "~0.3.2"
   },
   "devDependencies": {
     "node-dev": "~0.2.3"
