Add pdfkit dependency

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "nib": "~0.8.2",
     "stylus": "~0.30.1",
     "qrcode": "~0.2.4",
-    "canvas": "~0.13.1"
+    "canvas": "~0.13.1",
+    "pdfkit": "~0.1.9"
   },
   "devDependencies": {
     "node-dev": "~0.2.3"
