--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "stylus": "~0.30.1",
     "qrcode": "~0.2.4",
     "canvas": "~0.13.1",
-    "pdfkit": "~0.1.9"
+    "pdfkit": "~0.1.9",
     "cookies": "~0.3.2"
   },
   "devDependencies": {
