fix for package.json

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "qrcode": "~0.2.4",
     "canvas": "~0.13.1",
     "pdfkit": "~0.1.9",
-    "cookies": "~0.3.2"
+    "cookies": "~0.3.2",
     "xtend": "~1.0.3",
     "proj4js": "~0.3.0"
   },
